tests/functional/lang/eval-fail-lessThan-1.err.exp
error:
       … while calling the 'lessThan' builtin
         at /pwd/lang/eval-fail-lessThan-1.nix:1:1:
            1| builtins.lessThan 1 "foo"
             | ^
            2|

       error: cannot compare an integer with a string; values are 1 and "foo"
